--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 		<p>This whole thing is being developed live, (and all by hand!) so don't expect the same site to still be up an hour from now -- or for the site to be up at all ;-)</p>
 		<p>By the way, you can get free domains at <a href="http://dot.tk" target="_blank" class="link">Dot.TK</a> or <a href="https://freenom.com" target="_blank" class="link">Freenom.com</a>. I think I'll eventually make a tutorial on how to get a website like this running, and by then it'll hopefully look nicer and I'll be able to teach you better.</p>
 		<p>Maybe I'll even have a ProTracker-themed store sometime, who knows?</p>
+		<p>I made this nifty Pokemon box list spreadsheet, I'll try to keep it semi-updated: <a href="box-list.html" target="_blank" class="link">box list</a>
 		<p>While you're waiting, check out my SoundCloud playlist:</p>
 		<iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/673562202&color=%234da3d4&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true" alt="<a href="https://soundcloud.com/anders-meadwell/sets/play_next" style="margin-left: 20px;"></iframe>
 		</main>
