--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		
 		<title>ProTracker.tk</title>
 		
+		<script src="js/handlebars.js"></script>
+		
 		<meta name="google-site-verification" content="6R1p_42qJ1bZwnkrUvM1nuD7f7P7Ox7b-1m84ylgnPs" />
 		
 		<meta name="msvalidate.01" content="AAD028C2F09686DECB9CF466658BDFC9" />
