--- a/test.html
+++ b/test.html
@@ -1,29 +1,36 @@
+
 <!DOCTYPE html>
 <html>
-	
+
 	<head>
+	
+		<meta charset="UTF-8">
 		
-		<title>test | ProTracker.tk</title>
+		<title>ProTracker.tk</title>
+		
+		<script src="js/handlebars.js"></script>
+		
+		<meta name="google-site-verification" content="6R1p_42qJ1bZwnkrUvM1nuD7f7P7Ox7b-1m84ylgnPs" />
+		
+		<meta name="msvalidate.01" content="AAD028C2F09686DECB9CF466658BDFC9" />
 		
 		<link rel="icon" href="https://protracker.tk/favicon.ico" type="image/x-icon">
 		
-		<link rel="stylesheet" type="text/css" href="https://protracker.tk/stylesheet.css">
-	
+		<link rel="stylesheet" type="text/css" href="stylesheet.css">
+		
 	</head>
 	
-	
 	<body>
-		
+	
 		<header>
-			<h1><a href="https://protracker.tk" style="color: black;">ProTracker.tk</a></h1>
-			<h2>test</h2>
+			<h1><a href="https://protracker.tk" class="heading">ProTracker.tk</a></h1>
+			<h2>By Anders Meadwell</h2>
 			
 			<!-- navbar begins here -->
 			<nav>
 				<ul style="margin-right: 20px; margin-left: 20px; padding-right: 0px; padding-left: 0px;">
-					<li style="margin-right: 0px;"><a href="https://protracker.tk">Home</a></li>
+					<li style="margin-right: 0px;"><a href="https://protracker.tk" class="active">Home</a></li>
 					<li style="margin-left: 0px; margin-right: 0px;"><a href="https://protracker.tk/about.html">About</a></li>
-					<li style="margin-left: 0px; margin-right: 0px;"><a href="https://protracker.tk/banana.html">Banana</a></li>
 					<li style="margin-left: 0px; margin-right: 0px;"><a href="https://protracker.tk/blog.html">Blog</a></li>
 					<li style="margin-left: 0px; margin-right: 0px;"><a href="https://protracker.tk/contact.html">Contact</a></li>
 					<li style="margin-left: 0px;"><a href="https://protracker.tk/donate.html">Donate</a></li>
@@ -37,16 +44,19 @@
 		</header>
 		
 		<main>
-		<p>test</p>
-		
-		<img src="favicon.png" alt="favicon png">
-		
-		<img src="https://protracker.tk/favicon.ico" alt="favicon ico">
+		<h2>This site is a work in progress.</h2>
+		<p>Thanks for your interest in my project.</p>
+		<p>This whole thing is being developed live, (and all by hand!) so don't expect the same site to still be up an hour from now -- or for the site to be up at all ;-)</p>
+		<p>By the way, you can get free domains at <a href="http://dot.tk" target="_blank" class="link">Dot.TK</a> or <a href="https://freenom.com" target="_blank" class="link">Freenom.com</a>. I think I'll eventually make a tutorial on how to get a website like this running, and by then it'll hopefully look nicer and I'll be able to teach you better.</p>
+		<p>Maybe I'll even have a ProTracker-themed store sometime, who knows?</p>
+		<p>I also made this nifty Pokemon box list spreadsheet, I'll try to keep it semi-updated: <a href="box-list" target="_blank" class="link">box list</a>
+		<p>While you're waiting, check out my SoundCloud playlist:</p>
+		<iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/673562202&color=%234da3d4&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true" alt="<a href="https://soundcloud.com/anders-meadwell/sets/play_next" style="margin-left: 20px;"></iframe>
 		</main>
 		
 		<footer>
 			<hr>
-			<p>&#169 2018 Anders Meadwell</p>
+			<p>&copy 2018 Anders Meadwell</p>
 		</footer>
 		
 		<!-- this is JSEcoin miner -->
@@ -55,5 +65,4 @@
 		</script>
 		
 	</body>
-	
 </html>
