--- a/test.html
+++ b/test.html
@@ -37,6 +37,7 @@
 					<!-- remember to add class "active" to current page on nav bar -->
 				</ul>
 			</nav>
+			{% include generateDynamicMenu.html root="/components" %}
 			
 			<br>
 			<br>
