--- a/test.html
+++ b/test.html
@@ -1,47 +1,4 @@
-
-<!DOCTYPE html>
-<html>
-
-	<head>
-	
-		<meta charset="UTF-8">
-		
-		<title>ProTracker.tk</title>
-		
-		<script src="js/handlebars.js"></script>
-		
-		<meta name="google-site-verification" content="6R1p_42qJ1bZwnkrUvM1nuD7f7P7Ox7b-1m84ylgnPs" />
-		
-		<meta name="msvalidate.01" content="AAD028C2F09686DECB9CF466658BDFC9" />
-		
-		<link rel="icon" href="https://protracker.tk/favicon.ico" type="image/x-icon">
-		
-		<link rel="stylesheet" type="text/css" href="stylesheet.css">
-		
-	</head>
-	
-	<body>
-	
-		<header>
-			<h1><a href="https://protracker.tk" class="heading">ProTracker.tk</a></h1>
-			<h2>By Anders Meadwell</h2>
-			
-			<!-- navbar begins here -->
-			<nav>
-				<ul style="margin-right: 20px; margin-left: 20px; padding-right: 0px; padding-left: 0px;">
-					<li style="margin-right: 0px;"><a href="https://protracker.tk" class="active">Home</a></li>
-					<li style="margin-left: 0px; margin-right: 0px;"><a href="https://protracker.tk/about.html">About</a></li>
-					<li style="margin-left: 0px; margin-right: 0px;"><a href="https://protracker.tk/blog.html">Blog</a></li>
-					<li style="margin-left: 0px; margin-right: 0px;"><a href="https://protracker.tk/contact.html">Contact</a></li>
-					<li style="margin-left: 0px;"><a href="https://protracker.tk/donate.html">Donate</a></li>
-					<!-- remember to add class "active" to current page on nav bar -->
-				</ul>
-			</nav>
-			
-			<br>
-			<br>
-			<hr>
-		</header>
+{% include header.html %}
 		
 		<main>
 		<h2>This site is a work in progress.</h2>
