--- a/test.html
+++ b/test.html
@@ -1,4 +1,5 @@
-{% include /_includes/header.html %}
+{% include header.html %}
+{% include index.html %}
 		
 		<main>
 		<h2>This site is a work in progress.</h2>
