--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@ layout: default
 title: Blog
 ---
 
-## Posts
+<h2>Posts</h2>
 
 {% for post in site.posts %}
 	<a href="{{ post.url }}" class="blog">
