--- a/404.html
+++ b/404.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+supersecretcode: 404
+title: 404
 ---
 
 <style type="text/css" media="screen">
@@ -8,7 +10,7 @@ layout: default
     max-width: 600px;
     text-align: center;
   }
-  h1 {
+  .404 {
     margin: 30px 0;
     font-size: 4em;
     line-height: 1;
@@ -17,7 +19,7 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <h1 class="404">404</h1>
 
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
