--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@ title: 404
     max-width: 600px;
     text-align: center;
   }
-  .404 {
+  .bigh2 {
     margin: 30px 0;
     font-size: 4em;
     line-height: 1;
@@ -19,7 +19,7 @@ title: 404
 </style>
 
 <div class="container">
-  <h1 class="404">404</h1>
+  <h1 class="bigh2">404</h1>
 
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
