--- a/school/the-chrysalids-essay/ideas.html
+++ b/school/the-chrysalids-essay/ideas.html
@@ -3,6 +3,7 @@ layout: default
 title: Chrysalids Ideas
 ---
 
+<article>
 <h1><i>The Chrysalids</i> Essay Ideas</h1>
 
 <ul>
@@ -141,3 +142,4 @@ title: Chrysalids Ideas
 		</details>
 	</li>
 </ul>
+</article>
