--- a/school/the-chrysalids-essay/ideas.html
+++ b/school/the-chrysalids-essay/ideas.html
@@ -1,7 +1,14 @@
----
-layout: default
-title: Chrysalids Ideas
----
+<!doctype html>
+<html>
+
+<head>
+	<title>Chrysalids Ideas</title>
+	</link rel="icon" href="/favicon.ico" type="image/x-icon">	
+	</link rel="stylesheet" type="text/css" href="/stylesheet.css">
+	</meta charset="UTF-8">
+</head>
+
+<body>
 
 <h1><i>The Chrysalids</i> Essay Ideas</h1>
 
@@ -146,3 +153,7 @@ title: Chrysalids Ideas
 	</li>
 	</br>
 </ul>
+
+</body>
+
+</html>
