--- a/school/the-chrysalids-essay/ideas.html
+++ b/school/the-chrysalids-essay/ideas.html
@@ -3,9 +3,9 @@
 
 <head>
 	<title>Chrysalids Ideas</title>
-	</link rel="icon" href="/favicon.ico" type="image/x-icon">	
-	</link rel="stylesheet" type="text/css" href="/stylesheet.css">
-	</meta charset="UTF-8">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon" />	
+	<link rel="stylesheet" type="text/css" href="/stylesheet.css" />
+	<meta charset="UTF-8" />
 </head>
 
 <body>
