--- a/school/the-chrysalids-essay/ideas.html
+++ b/school/the-chrysalids-essay/ideas.html
@@ -3,9 +3,16 @@
 
 <head>
 	<title>Chrysalids Ideas</title>
-	<link rel="icon" href="/favicon.ico" type="image/x-icon" />	
-	<link rel="stylesheet" type="text/css" href="/stylesheet.css" />
+	<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 	<meta charset="UTF-8" />
+	<style>
+		h1, p, li, h2, figcaption, time {
+			color: black;
+			margin-left: 20px;
+			margin-right: 20px;
+			font-family: "Courier New", Courier, monospace;
+		}
+	</style>
 </head>
 
 <body>
@@ -41,7 +48,6 @@
 			</ul>
 		</details>
 	</li>
-	</br>
 	<li>
 		<details>
 			<summary>why is identity important?</summary>
@@ -107,7 +113,6 @@
 			</ul>
 		</details>
 	</li>
-	</br>
 	<li>
 		<details>
 			<summary>if your unique identity (ie. exclusive to you, rest of your culture gone, etc) is damaged, there may be no one left to help you repair it</summary>
@@ -116,7 +121,6 @@
 			</ul>
 		</details>
 	</li>
-	</br>
 	<li>
 		<details>
 			<summary>society doesn't have to accept your identity</summary>
@@ -125,7 +129,6 @@
 			</ul>
 		</details>
 	</li>
-	</br>
 	<li>
 		<details>
 			<summary>main points:</summary>
@@ -151,7 +154,6 @@
 			</ul>
 		</details>
 	</li>
-	</br>
 </ul>
 
 </body>
